# iwt

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.github/workflows/: aarch64.yml  ci.yml  sanitizers.yml  static-analysis.yml
cmake/: clang-tidy.cmake  cppcheck.cmake  iwyu.cmake  project-options.cmake
src/: CMakeLists.txt
src/iwt/: CMakeLists.txt
src/iwtint/: CMakeLists.txt
src/iwtint/include/: iwtint.hpp  iwtint_addition.hpp  iwtint_config.hpp  iwtint_division.hpp  iwtint_multiplication.hpp  iwtint_narrow.hpp  iwtint_subtraction.hpp
src/iwtint/test/: iwtint.t.cpp
